testsuite/tests/patsyn/should_fail/T9793-fail.hs
{-# LANGUAGE PatternSynonyms #-}

module Foo where

pattern P :: [a] -> [a]
pattern P x <- x@(y:_)
