testsuite/tests/patsyn/should_fail/T9793-fail.stderr

T9793-fail.hs:6:16: error:
    • Pattern synonym definition cannot contain as-patterns (@) which contain free variables:
        x@(y : _)
    • In the declaration for pattern synonym ‘P’
